example_bdi/bdi_shiny/deploy/k8s/stage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/appgw-ssl-certificate: ux-test
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
  name: shiny
spec:
  rules:
  - host: malaria-apps.20.69.119.9.nip.io
    http:
      paths:
      - path: /malaria-bdi-hbhi/*
        pathType: Prefix
        backend:
          service:
            name: bdi-hbhi
            port:
              number: 80
